<?xml version="1.0" encoding="utf-8"?>

<!--
    File: activity_saved_recipe.xml
    Purpose: Layout file for the SavedRecipeActivity, displaying a list of saved recipes.
    Author: Beulah Nwokotubo
    Lab Section: 013
    Creation Date: 28th March, 2024
-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SavedRecipeActivity">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/myToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#6854a4"
        android:titleTextColor="@color/white"
        android:elevation="4dp"
        app:title="@string/fav_recipe"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        tools:ignore="MissingConstraints" />

    <!-- RecyclerView to display saved recipes -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewFavRecipes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:padding="8dp"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@+id/myToolbar"
        tools:layout_editor_absoluteX="-16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>