...

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Menu item for navigating to the Recipe Search app -->
    <item
        android:id="@+id/item_recipes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/recipe_icon"
        android:title="@string/app_recipes_name"
        app:tooltipText="@string/app_recipes_name"
        app:showAsAction="always" />
...
